# agent-ethan-guide-mcp

./: .gitignore  MANIFEST.in  README.ja.md  README.md  docker-compose.yml  mcp_server.py  pyproject.toml
configs/: server.yaml
mcp_app/tools/: agent_ethan_setup.py
tests/: test_agent_ethan_setup.py
